Fixed scrollbars again.

--- a/j-Modal/component.css
+++ b/j-Modal/component.css
@@ -3,6 +3,7 @@
 .ui-modal { background-color: white; margin: 0 auto; border-radius: 3px; box-shadow: 0 0 30px rgba(0,0,0,0.05); transform: scale(0); transition: transform 0.2s; position: absolute; left: 50%; overflow: hidden; border: 1px solid #E0E0E0; }
 .ui-modal-visible .ui-modal { transform: scale(1); }
 .ui-modal-body-area { overflow-x: hidden; overflow-y: auto; overflow-scrolling: touch; width: 100%; }
+.ui-modal-body { margin-right: 30px; }
 .ui-modal-header { border-bottom: 1px solid #E0E0E0; height: 50px; padding: 0 0 0 15px; }
 .ui-modal-icon { float: left; height: 50px; line-height: 50px; margin-right: 7px; }
 .ui-modal-header label { height: 50px; line-height: 50px; font-size: 16px; float: left; padding: 0; margin: 0; font-weight: bold; color: black; }
